snapshots/tests/project/chess_brain_vb/chess_brain_vb_chessbrainvb_project_load.snap
---
source: vb6parse/tests/project/chess_brain_vb.rs
expression: project
---
project_type: Exe
references:
  - uuid: 420b2830-e718-11cf-893d-00a0c9054228
    unknown1: "1.0"
    unknown2: "0"
    path: "C:\\Windows\\SysWOW64\\scrrun.dll"
    description: Microsoft Scripting Runtime
objects: []
modules:
  - name: basSearch
    path: "Modules\\Search.bas"
  - name: basBook
    path: "Modules\\Book.bas"
  - name: basConst
    path: "Modules\\Const.bas"
  - name: basEPD
    path: "Modules\\EPD.bas"
  - name: basIO
    path: "Modules\\IO.bas"
  - name: basBoard
    path: "Modules\\Board.bas"
  - name: basEval
    path: "Modules\\Eval.bas"
  - name: basChessBrainVB
    path: "Modules\\ChessBrainVB.bas"
  - name: basHash
    path: "Modules\\Hash.bas"
  - name: basTime
    path: "Modules\\Time.bas"
  - name: basDebug
    path: "Modules\\Debug.bas"
  - name: basCmdOutput
    path: "Modules\\CmdOutput.bas"
  - name: basProcess
    path: "Modules\\Process.bas"
classes:
  - name: clsHashMap
    path: "Modules\\HashMap.cls"
related_documents:
  - ChessBrainVB.ini
property_pages: []
designers: []
forms:
  - "Forms\\Main.frm"
user_controls: []
user_documents: []
other_properties:
  CodeSMART:
    Task_UID: 02_07_17_16_31_28
  MS Transaction Server:
    AutoRefresh: "1"
properties:
  unused_control_info: Remove
  upgrade_controls: Upgrade
  res_file_32_path: ""
  icon_form: frmMain
  startup: Sub Main
  help_file_path: ""
  title: ChessBrainVB
  exe_32_file_name: ChessBrainVB.exe
  exe_32_compatible: ""
  dll_base_address: 0
  path_32: ""
  command_line_arguments: ""
  name: ChessBrainVB
  description: ""
  debug_startup_component: ""
  help_context_id: "0"
  compatibility_mode: NoCompatibility
  version_32_compatibility: ""
  version_info:
    major: 4
    minor: 0
    revision: 3
    auto_increment_revision: 0
    company_name: "-"
    file_description: VB6 chess engine
    copyright: Roger Zuehlsdorf (2016)
    trademark: ""
    product_name: ""
    comments: "ChessBrainVB by Roger Zuehlsdorf 2023 / based on LarsenVB by Luca Dormio and Faile by Adrien M.Regimbald / Stockfish "
  server_support_files: Local
  conditional_compile: DEBUG_MODE = 0
  compilation_type:
    NativeCode:
      optimization_type: FavorFastCode
      favor_pentium_pro: "True"
      code_view_debug_info: NotCreated
      aliasing: AssumeAliasing
      bounds_check: NoBoundsCheck
      overflow_check: NoOverflowCheck
      floating_point_check: NoFloatingPointErrorCheck
      pentium_fdiv_bug_check: NoPentiumFDivBugCheck
      unrounded_floating_point: Allow
  start_mode: StandAlone
  unattended: Interactive
  retained: UnloadOnExit
  thread_per_object: 0
  threading_model: ApartmentThreaded
  max_number_of_threads: 1
  debug_startup_option: WaitForComponentCreation
  use_existing_browser: Use
